--- a/includes/home.html
+++ b/includes/home.html
@@ -176,21 +176,27 @@
 								<p>Event Name: Martyr's Day Celebrations</p> -->
 							</div>
 						</div>
-						<!-- <div class="row">
+						<div class="row">
 							<div id="owl-courses">
-								<div class="item course-item">
-									
-									<div class="up-content">
-									<carousel interval="myInterval">
-                                   <slide ng-repeat="slide in gallery" active="slide.active">
-                                     <img class="image-circle" ng-src="{{slide.image}}" />
-                        
-                                </slide>
-                                   </carousel>
-										
-									</div>
-								  </div> --><!-- 
-								<div class="item course-item">
+
+
+<!-- 
+							<uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+		                    <uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id" >
+
+										   <div class="item course-item">
+											<div class="up-content">
+										            <img class="image-circle" ng-src="{{slide.image}}" />
+										            <img class="image-circle" ng-src="{{slide.image}}" />
+										            <img class="image-circle" ng-src="{{slide.image}}" />	
+										  </div>
+										  </div>
+								 </uib-slide>
+		                         </uib-carousel>
+ -->
+
+		                         
+								<!-- <div class="item course-item">
 									<a href="single-course.htm"><img src="assets\images\course-2.jpg" alt=""></a>
 									<div class="down-content">
 										<img src="assets\images\course-author-2.jpg" alt="">
@@ -206,7 +212,7 @@
 										</div>
 									</div>
 								</div> -->
-								<!-- <div class="item course-item">
+								<!--  <div class="item course-item">
 									<a href="single-course.htm"><img src="assets\images\course-3.jpg" alt=""></a>
 									<div class="down-content">
 										<img src="assets\images\course-author-3.jpg" alt="">
@@ -221,8 +227,8 @@
 											<a href="single-course.htm">view more<i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
-								</div> -->
-								<!-- <div class="item course-item">
+								</div> 
+								 <div class="item course-item">
 									<a href="single-course.htm"><img src="assets\images\course-4.jpg" alt=""></a>
 									<div class="down-content">
 										<img src="assets\images\course-author-4.jpg" alt="">
@@ -237,8 +243,8 @@
 											<a href="single-course.htm">view more<i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
-								</div> -->
-							<!-- 	<div class="item course-item">
+								</div>
+								<div class="item course-item">
 									<a href="single-course.htm"><img src="assets\images\course-5.jpg" alt=""></a>
 									<div class="down-content">
 										<img src="assets\images\course-author-2.jpg" alt="">
@@ -253,8 +259,8 @@
 											<a href="single-course.htm">view more<i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
-								</div> -->
-								<!-- <div class="item course-item">
+								</div>
+								 <div class="item course-item">
 									<a href="single-course.htm"><img src="assets\images\course-6.jpg" alt=""></a>
 									<div class="down-content">
 										<img src="assets\images\course-author-1.jpg" alt="">
@@ -269,8 +275,8 @@
 											<a href="single-course.htm">view more<i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
-								</div> -->
-							<!-- 	<div class="item course-item">
+								</div> 
+							<div class="item course-item">
 									<a href="single-course.htm"><img src="assets\images\course-7.jpg" alt=""></a>
 									<div class="down-content">
 										<img src="assets\images\course-author-3.jpg" alt="">
@@ -285,8 +291,8 @@
 											<a href="single-course.htm">view more<i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
-								</div> -->
-							<!-- 	<div class="item course-item">
+								</div> 
+								<div class="item course-item">
 									<a href="single-course.htm"><img src="assets\images\course-8.jpg" alt=""></a>
 									<div class="down-content">
 										<img src="assets\images\course-author-4.jpg" alt="">
@@ -301,8 +307,8 @@
 											<a href="single-course.htm">view more<i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
-								</div> -->
-							<!-- 	<div class="item course-item">
+								</div> 
+								<div class="item course-item">
 									<a href="single-course.htm"><img src="assets\images\course-9.jpg" alt=""></a>
 									<div class="down-content">
 										<img src="assets\images\course-author-1.jpg" alt="">
@@ -317,7 +323,11 @@
 											<a href="single-course.htm">view more<i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
-								</div> -->
+								</div>  -->
+
+
+
+
 							</div>
 						</div>
 					</div>
@@ -360,7 +370,7 @@
 								<div class="row">
 									<div class="col-md-12">
 										<div class="news-item">
-											<a href="single-post.htm"><img src="assets\images\news-thumb-1.jpg" alt=""></a>
+											<a href="single-post.htm"><img src="assets\images\custom\Morning_Assembly_7_103.jpg" alt=""></a>
 											<ul>
 												<li>7 Oct 2015</li>
 												<li>By Admin</li>
@@ -370,7 +380,7 @@
 											<p>Ugh chambray lumbersexual food truc artisan meditation sartorial post-ironic.</p>
 										</div>
 										<div class="news-item">
-											<a href="single-post.htm"><img src="assets\images\news-thumb-2.jpg" alt=""></a>
+											<a href="single-post.htm"><img src="assets\images\custom\Martyrs_Day_25.jpg" alt=""></a>
 											<ul>
 												<li>7 Oct 2015</li>
 												<li>By Admin</li>
@@ -426,7 +436,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="border-button">
-									<a href="#">Go to the books</a>
+									<a href="#/">Go to the books</a>
 								</div>
 							</div>
 						</div>
@@ -446,14 +456,14 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="teacher-item">
 									<div class="thumb-holder">
-										<a href="single-teacher.htm"><img src="assets\images\teacher-1.jpg" alt=""></a>
+										<a href="#"><img src="assets\images\custom\DrAlbert.jpg" alt=""></a>
 										<div class="hover-content">
-											<ul>
+											<!-- <ul>
 												<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 												<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 												<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
 												<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-											</ul>
+											</ul> -->
 										</div>
 									</div>
 									<div class="down-content">
@@ -466,14 +476,14 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="teacher-item">
 									<div class="thumb-holder">
-										<a href="single-teacher.htm"><img src="assets\images\teacher-2.jpg" alt=""></a>
+										<a href="single-teacher.htm"><img src="assets\images\custom\Srdennis.jpg" alt=""></a>
 										<div class="hover-content">
-											<ul>
+											<!-- <ul>
 												<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 												<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 												<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
 												<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-											</ul>
+											</ul> -->
 										</div>
 									</div>
 									<div class="down-content">
@@ -486,14 +496,14 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="teacher-item">
 									<div class="thumb-holder">
-										<a href="single-teacher.htm"><img src="assets\images\teacher-4.jpg" alt=""></a>
+										<a href="single-teacher.htm"><img src="assets\images\custom\DrAlbert.jpg" alt=""></a>
 										<div class="hover-content">
-											<ul>
+											<!-- <ul>
 												<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 												<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 												<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
 												<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-											</ul>
+											</ul> -->
 										</div>
 									</div>
 									<div class="down-content">
@@ -506,18 +516,18 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="teacher-item">
 									<div class="thumb-holder">
-										<a href="single-teacher.htm"><img src="assets\images\teacher-3.jpg" alt=""></a>
+										<a href="single-teacher.htm"><img src="assets\images\custom\Srdennis.jpg" alt=""></a>
 										<div class="hover-content">
-											<ul>
+											<!-- <ul>
 												<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 												<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 												<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
 												<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-											</ul>
+											</ul> -->
 										</div>
 									</div>
 									<div class="down-content">
-										<a href="single-teacher.htm"><h4>Samuel Delossantos</h4></a>
+										<a href=""><h4>Samuel Delossantos</h4></a>
 										<span>Math Teacher</span>
 										<p>Ugh chambray lumbersexual food  artisan meditation sartorial well post-ironic wes</p>
 									</div>
@@ -532,7 +542,7 @@
 						<div class="row">
 							<p>Young people have been 'mis-sold' <em>path to success</em>, business leaders warn.</p>
 							<div class="accent-button">
-								<a href="courses-list.htm">View Courses</a>
+								<a href="#\">View Courses</a>
 							</div>
 						</div>
 					</div>
